[tool.poetry]
name = "faq_demo"
version = "0.1.0"
description = ""
authors = ["George Panchuk"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
torch = "^1.10.1"
sentence-transformers = "^2.1.0"
quaterion = "^0.1.16"
wandb = "^0.12.9"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
